# EmotionAnalyzer

./: .replit  LOCAL_SETUP.md  README.md  admin_upgrade.py  ai_vision_analyzer.py  app.py  auth.py  auto_emotion_detector.py  body_language_analyzer.py  chatgpt_interface.py  database.py  fast_emotion_api.py  instant_emotion_analyzer.py  lie_detector.py  live_camera.py  live_video_analyzer.py  login_ui.py  openai_analyzer.py  package-lock.json  package.json  payment_plans.py  payment_ui.py  pyproject.toml  realtime_emotion_analyzer.py  replit.md  requirements_fastapi.txt  screen_recorder.py  screen_recorder_interview.py  screen_recorder_standalone.py  simple_chatgpt_analyzer.py  simple_emotion_detector.py  simple_landmarks_tracker.py  simple_live_camera.py  simple_screen_recorder.py  stress_analyzer.py  test_screen_recorder.py  video_analyzer.py  web_camera.py  web_screen_recorder.py  working_live_analyzer.py  (+1 more)
.streamlit/: config.toml
attached_assets/: Pasted--0-Emoticon-Live-AI-Emotion-Interpretation-from-Micro-Expressions-Try-it-now--1752555826743_1752555826744.txt  Pasted--0-Emoticon-Live-AI-Emotion-Interpretation-from-Micro-Expressions-Try-it-now--1752922087441_1752922087444.txt  Pasted--Career-Opportunities-Join-our-mission-to-revolutionize-emotional-intelligence-through-AI-Abou-1752917838959_1752917838962.txt  Pasted-import-streamlit-as-st-import-cv2-import-mediapipe-as-mp-import-time-from-openai-analyzer-import-ana-1752492002190_1752492002195.txt
backend/: main.py
frontend/: index.html  package.json
pages/: About.py  Career.py  Contact.py  Screen Recorder.py  (+7 more)
(+18 files in other folders)
